--- a/report.css
+++ b/report.css
@@ -1,12 +1,32 @@
-html, body {
+html,
+body {
     background: #131317;
-    color:white;
+    color: white;
     font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-
     text-shadow: #000 1px 1px;
 }
 
+.summary {
+    background: #25262e;
+    margin: 8px;
+    padding: 8px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.summary span {
+    margin-right: 12px;
+}
+
 .node {
+    background: #25262e;
+    margin: 8px;
+    padding: 8px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.legend {
     background: #25262e;
     margin: 8px;
     padding: 8px;
@@ -14,19 +34,44 @@ html, body {
 
 .node-name {
     font-size: 18pt;
+    display: block;
 }
 
-.node.data > .node-name {       color: #69985E;}
-.node.data_cold > .node-name {  color: #22b2da;}
-.node.data_warm > .node-name {  color: #f0d43a;}
-.node.data_hot > .node-name {   color: #f23557;}
+.node-role {
+    display: block;
+}
 
+.node.data .node-name {
+    color: #69985E;
+}
 
-.shard.data_hot {        background: #f23557;}
-.shard.data_warm {       background: #f0d43a;}
-.shard.data_cold {       background: #22b2da;}
-.shard.data_content {    background: #69985E;}
+.node.data_cold .node-name {
+    color: #22b2da;
+}
 
+.node.data_warm .node-name {
+    color: #f0d43a;
+}
+
+.node.data_hot .node-name {
+    color: #f23557;
+}
+
+.shard.data_hot, .legend-item.data_hot {
+    background: #f23557;
+}
+
+.shard.data_warm, .legend-item.data_warm {
+    background: #f0d43a;
+}
+
+.shard.data_cold, .legend-item.data_cold {
+    background: #22b2da;
+}
+
+.shard.data_content, .legend-item.data_content {
+    background: #69985E;
+}
 
 
 .shards {
@@ -36,31 +81,38 @@ html, body {
     list-style: none;
 }
 
+.legend-item,
 .shard {
     width: 32px;
     margin: 2px;
     text-align: center;
     font-weight: bold;
     background: lightslategray;
-    position:relative;
+    position: relative;
 }
 
+.legend-item {
+    width: auto;
+    display: inline-block;
+    padding: 0 4px;
+    min-width: 32px;
+}
 
 .shard:before {
     content: attr(data-text);
-    position:absolute;
-    top:50%;
-    transform:translateY(-50%);
-    left:100%;
-    margin-left:15px;
-    padding:10px;
-    border-radius:10px;
-    background:#131317;
-    text-align:center;  
-    display:none;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 100%;
+    margin-left: 15px;
+    padding: 10px;
+    border-radius: 10px;
+    background: #131317;
+    text-align: center;
+    display: none;
     z-index: 100;
-  }
-  
-  .shard:hover:before {
-    display:block;
-  }
+}
+
+.shard:hover:before {
+    display: block;
+}
